# claude-memory-server

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  =3.1.40  ADVANCED.md  BUG_FIXING_STATUS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_JOURNAL.md  CODE_IMPROVEMENT_CHECKLIST.md  CODE_IMPROVEMENT_PLAN.md  DAY3_COMPLETION_SUMMARY.txt  DEBUGGING.md  E2E_TEST_REPORT.md  E2E_TEST_SUMMARY.md  EXECUTABLE_DEVELOPMENT_CHECKLIST.md  FEAT-059_STATUS_SUMMARY.md  FINAL_STATUS_REPORT.md  GETTING_STARTED.md  IN_PROGRESS.md  LEARNED_PRINCIPLES.md  LICENSE  MCP_INTEGRATION_COMPLETE.md  MERGE_READINESS_CHECKLIST.md  ORCHESTRATION.md  PERF-007_COMPREHENSIVE_REPORT.md  PERF-007_DAY45_STATUS.md  PERFORMANCE_BENCHMARK_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_PROGRESS_SUMMARY.md  PROJECT_STATUS.md  README.md  REF_021_022_ANALYSIS.md  REVIEW.md  REVIEW_FINDINGS.md  SESSION_COMPLETION_NOV16.md  SKIP_ANALYSIS_REPORT.md  (+36 more)
changelog.d/: .gitkeep  BUG-059.md  BUG-060.md  BUG-062.md  BUG-070.md  BUG-073.md  BUG-079.md  BUG-272.md  BUG-276.md  BUG-281.md  BUG-282.md  BUG-283.md  BUG-286.md  BUG-288.md  BUG-291.md  BUG-296.md  BUG-302.md  BUG-303.md  BUG-307.md  BUG-309.md  BUG-312.md  BUG-318.md  BUG-326.md  BUG-328.md  BUG-336.md  BUG-338.md  BUG-354.md  BUG-367.md  BUG-368.md  BUG-376.md  BUG-390.md  BUG-399.md  (+13 more)
rust_core/: Cargo.toml  KNOWN_ISSUES.md  PHASE_1_PROGRESS.md  requirements.txt
rust_core/src/: config_parsing.rs  lib.rs  parsing.rs
rust_core/tests/unit/: test_config_parsing.py  test_csharp_simple.py  test_sql_parsing.py
(+733 files in other folders)
