[package]
name = "mcp_performance_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_performance_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
ndarray = "0.17"
rayon = "1.8"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-sequel = "0.3"
tree-sitter-php = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
streaming-iterator = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
